Bug 102014 - Mesa git build broken by commit bc7f41e11d325280db12e7b9444501357bc13922
Summary: Mesa git build broken by commit bc7f41e11d325280db12e7b9444501357bc13922
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords: bisected, regression
: 102016 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-08-02 12:54 UTC by Marko
Modified: 2017-08-03 13:52 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch #1 to fix build (420 bytes, patch)
2017-08-02 12:57 UTC, Marko
Details | Splinter Review
Patch #2 to fix build (415 bytes, patch)
2017-08-02 12:57 UTC, Marko
Details | Splinter Review
Patch #3 to fix build (616 bytes, patch)
2017-08-02 12:58 UTC, Marko
Details | Splinter Review
Fixes build for current Mesa-git (2.36 KB, patch)
2017-08-03 08:23 UTC, Marko
Details | Splinter Review

Description Marko 2017-08-02 12:54:05 UTC
Hello,

Current git build is seemingly broken by:

[  511s] pipe_radeonsi.c: In function 'create_screen':
[  511s] pipe_radeonsi.c:15:34: error: 'flags' undeclared (first use in this function); did you mean 'fabs'?
[  511s]     rw = amdgpu_winsys_create(fd, flags, radeonsi_screen_create);
[  511s]                                   ^~~~~
[  511s]                                   fabs
[  511s] pipe_radeonsi.c:15:34: note: each undeclared identifier is reported only once for each function it appears in
[  511s] make[4]: *** [Makefile:996: pipe_radeonsi.lo] Error 1
[  511s] make[4]: *** Waiting for unfinished jobs....
[  511s] pipe_r600.c: In function 'create_screen':
[  511s] pipe_r600.c:12:38: error: 'flags' undeclared (first use in this function); did you mean 'fabs'?
[  511s]     rw = radeon_drm_winsys_create(fd, flags, r600_screen_create);
[  511s]                                       ^~~~~
[  511s]                                       fabs
[  511s] pipe_r600.c:12:38: note: each undeclared identifier is reported only once for each function it appears in
[  511s] pipe_r300.c: In function 'create_screen':
[  511s] pipe_r300.c:12:39: error: 'flags' undeclared (first use in this function); did you mean 'fabs'?
[  511s]     sws = radeon_drm_winsys_create(fd, flags, r300_screen_create);
[  511s]                                        ^~~~~
[  511s]                                        fabs

Regards,
Marko
Comment 1 Marko 2017-08-02 12:57:34 UTC
Created attachment 133196 [details] [review]
Patch #1 to fix build
Comment 2 Marko 2017-08-02 12:57:51 UTC
Created attachment 133197 [details] [review]
Patch #2 to fix build
Comment 3 Marko 2017-08-02 12:58:33 UTC
Created attachment 133198 [details] [review]
Patch #3 to fix build
Comment 4 Emil Velikov 2017-08-02 14:25:34 UTC
Thanks for the report Marko.

Can you please squash these three patches (analogous to the offending commit) and send the patch to the list - see https://www.mesa3d.org/submittingpatches.html for details.

One small correction - one should get the flags from config->flags.

Please include the following in the commit message:

Cc: Nicolai Hähnle <nicolai.haehnle@amd.com>
Fixes: bc7f41e11d3 ("gallium: add pipe_screen_config to screen_create functions")
Comment 5 Nicolai Hähnle 2017-08-02 15:29:54 UTC
*sigh*

This has not been a good week for me.

Please see https://patchwork.freedesktop.org/patch/170007/
Comment 6 Vinson Lee 2017-08-03 07:17:31 UTC
*** Bug 102016 has been marked as a duplicate of this bug. ***
Comment 7 Marko 2017-08-03 08:23:29 UTC
Created attachment 133223 [details] [review]
Fixes build for current Mesa-git

Hi guys,

I've generated a single patch which currently builds successfully on commit 	d5ba75f8881f0869dc16f71f7395514c0a35b6e2


Ragards,

Marko
Comment 8 Andy Furniss 2017-08-03 09:49:32 UTC
Also see this thread = there are more fixes needed to avoid issues after the build is fixed.

https://lists.freedesktop.org/archives/mesa-dev/2017-August/165195.html
Comment 9 Nicolai Hähnle 2017-08-03 13:52:06 UTC
The build should be fixed again with commit 33f7d71d5358337f08ce0bb94f5e915bda77748c, so closing this bug. (Note additional patches are on their way which are required if you build only OpenCL.)

FYI, there are also segfaults, which should be fixed by this series: https://patchwork.freedesktop.org/series/28311/


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.